--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "textpattern",
   "title": "Textpattern CMS",
-  "version": "4.7.3",
-  "description": "Textpattern is a flexible, elegant and easy-to-use CMS.",
+  "version": "4.7.4",
+  "description": "A flexible, elegant, fast and easy-to-use content management system written in PHP.",
   "author": "Team Textpattern",
   "homepage": "https://textpattern.com/",
   "keywords": [
