--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,20 @@
 {
+  "name": "textpattern/textpattern",
+  "description": "A flexible, elegant, fast and easy-to-use content management system written in PHP.",
+  "type": "project",
+  "author": "Team Textpattern",
+  "homepage": "https://textpattern.com/",
+  "keywords": [
+    "textpattern",
+    "blogging",
+    "cms",
+    "content management"
+  ],
+  "require": {
+    "php": ">=5.5.0"
+  }
   "require-dev": {
     "squizlabs/php_codesniffer": "3.*"
-  }
+  },
+  "license": "GPL-2.0-only"
 }
